<resources>
    <string name="app_name">ScanPiggy</string>
    <string name="UsuarioEmail">Usuario, Email o Número de Teléfono </string>
    <string name="Contrasena">Contraseña</string>
    <string name="ConfirmarContrasena">Confirmar Contraseña</string>
    <string name="Account">Cuenta</string>
    <string name="resumen_de_gastos">Resumen de Gastos:</string>


    <string name="Billetera">Billetera</string>
    <string name="banco_text">Banco</string>
    <string name="vence_text">Vence:</string>
    <string name="num_cuenta">**** **** **** ****</string>
    <string name="btn_text">Escanear Tarjeta</string>
    <string name="fecha">**/**</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Abrir menú</string>
    <string name="drawer_close">Cerrar menú</string>


    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="no_est_s_registrado_registrate">¿No estás registrado? Sign Up</string>
    <string name="ya_tienes_un_usuario_login">¿Ya tienes un usuario? Login</string>
    <string name="agrega_una_tarjeta_de_cr_dito">Agrega una tarjeta de crédito</string>
    <string name="presupuesto">Presupuesto:</string>
    <string name="registra_tus_movimientos_financieros_gastos_o_ingresos">Registra tus movimientos financieros: Gastos o Ingresos.</string>
    <string name="_1000">1000 €</string>
    <string name="cerrar_aplicaci_n">Cerrar Aplicación</string>
    <string name="consejos_financieros">Consejos Financieros</string>


</resources>